<resources>
    <string name="app_name">FoodOrdering</string>

    <!-- SPLASH SCREEN -->
    <string name="home_logo_description">Logo of the home page</string>
    <string name="business_name">QuickBite</string>
    <string name="business_motto">Fresh, fast , yours</string>
    <string name="splash_screen_footer">Bite once , taste forever…</string>

    <!-- main activity -->
    <string name="business_motto_1">Because you deserve best , QuickBite is there\nQuality meals, good time…</string>
    <string name="continue_button">Continue</string>

    <!-- LOGIN page -->
    <string name="login_text">Login to your account</string>
    <string name="email_phone_hint">Email or Phone number</string>
    <string name="password_hint">Password</string>
    <string name="or_alternative">or</string>
    <string name="login_alternative_text">login with</string>
    <string name="content_description_google">Login via Google</string>
    <string name="content_description_facebook">Login via Facebook</string>
    <string name="facebook_text">FACEBOOK</string>
    <string name="google_text">GOOGLE</string>
    <string name="login_button_text">Login</string>
    <string name="register_option_text">Don\'t have an account?</string>
    <string name="register_option_link">Register</string>

    <!-- REGISTRATION PAGE -->
    <string name="signup_text">Register a new account</string>
    <string name="name_hint">Name</string>
    <string name="signup_text2">Sign up</string>
    <string name="register_alternative_text">register with</string>
    <string name="login_option_text">Already have an account?</string>
    <string name="login_option_link">Login</string>

    <!-- LOCALISATION PERMISSION -->
    <string name="localisation_permission_title">Choose your location</string>
    <string name="location_hint">Select your location</string>
    <string name="allow_localization_permission_text">
        To provide you with the best experience , we need your permission to access your device\'s location. By enabling location services , we can offer personalized recommendations , accurate delivery estimates , and ensure a seamless food delivery .
    </string>


    <!-- HOME MENU -->
    <string name="home_option">Home</string>
    <string name="cart_option">Cart</string>
    <string name="search_option">Search</string>
    <string name="history_option">History</string>
    <string name="profile_option">Profile</string>
    <string name="home_page_title">Order your favorite food</string>
    <string name="notifications_description">Application notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>