<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"

>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/home_logo_description"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/main"
    />
    <TextView
        android:id="@+id/business_motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/business_motto"
        android:textStyle="italic"
        android:fontFamily="sans-serif"
    />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/login_text"
        android:textColor="@color/main"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingVertical="12dp"
        android:gravity="center_horizontal"
        android:background="#F9F4F9"
    >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/bordered_input"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:hint="@string/email_phone_hint"
            android:autofillHints="no"
            android:layout_marginHorizontal="48dp"
        />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordered_input"
            android:inputType="text|textPassword"
            android:maxLines="1"
            android:hint="@string/password_hint"
            android:autofillHints="no"
            android:layout_marginHorizontal="48dp"
        />
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="84pt"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/filled_button_home"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/or_alternative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_alternative"
        android:textSize="14sp"
    />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_alternative_text"
        android:textSize="18sp"
        android:textColor="@color/main"
    />

    <LinearLayout
        android:id="@+id/login_alternatives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="18dp"
    >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebook_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/facebook"
            android:background="@drawable/login_button"
            android:contentDescription="@string/content_description_facebook"
            android:gravity="center"
            android:text="@string/facebook_text"
            android:shadowColor="@color/cool_gray"
            android:shadowDy="@integer/material_motion_duration_medium_2"
            android:shadowRadius="@integer/material_motion_duration_medium_2"
        />

        <Space
            android:layout_width="10dp"
            android:layout_height="42dp"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/google"
            android:background="@drawable/login_button"
            android:contentDescription="@string/content_description_google"
            android:gravity="center"
            android:text="@string/google_text"
            android:shadowColor="@color/cool_gray"
        />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
    >
        <TextView
            android:id="@+id/register_option_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_option_text"
        />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
        />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_option_button"
            android:layout_width="84pt"
            android:layout_height="42dp"
            android:text="@string/register_option_link"
            android:background="@drawable/filled_button_home"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
        />

    </LinearLayout>

</LinearLayout>