<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home_logo_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/background"
        android:layout_marginTop="64dp"
    />

    <TextView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/main"
        />

    <TextView
        android:id="@+id/business_motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/business_name"
        android:text="@string/business_motto_1"
        android:gravity="center"
        android:textAlignment="center"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="82dp"
        android:text="@string/continue_button"
        android:paddingHorizontal="44dp"
        android:paddingVertical="2dp"
        android:fontFamily="sans-serif"
        android:background="@drawable/filled_button_home"
        android:textColor="@color/white"
    />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/splash_screen_footer"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="20dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>