<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:text="@string/localisation_permission_title"
        android:textSize="24sp"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:textColor="@color/cool_gray"
        android:paddingHorizontal="16dp"
    />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location_select_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@drawable/bordered_input"
        app:endIconTint="@color/black"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
    >
        <AutoCompleteTextView
            android:id="@+id/location_select"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@id/location_select_layout"
            android:inputType="none"
            android:hint="@string/location_hint"
            android:drawableEnd="@drawable/arrow_circle_down"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/allow_localization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="148dp"
        android:textSize="16sp"
        android:textColor="@color/cool_gray"
        android:text="@string/allow_localization_permission_text"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="10dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>